# inverst

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  test.cpp
docker/: Dockerfile  README.md
scripts/: format.sh
